<resources>
    <string name="app_name" translatable="false">i-on Android</string>
    <string name="app_label" translatable="false">i-on</string>

    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_courses">Courses</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_class">Class</string>
    <string name="title_class_section">Class Section</string>
    <string name="title_search">Search</string>
    <string name="title_delete_suggestions">Delete Suggestions</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_curricular_terms">Curricular Terms</string>
    <string name="title_course_details">Course Details</string>
    <string name="title_programmes">Programmes</string>
    <string name="title_programme_details">Programme Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_warning_all">Warning!</string>
    <string name="title_info" translatable="false">Info</string>
    <string name="title_oops_error" translatable="false">Oops!</string>

    <string name="button_label_optional_courses">Optional Courses</string>
    <string name="button_label_mandatory_courses">Mandatory Courses</string>

    <string name="label_programme">Programme</string>
    <string name="label_course_class_section">Course</string>
    <string name="label_class_class_section">Class</string>
    <string name="label_events_calendar">Events:</string>

    <string name="label_favorites_placeholder_favorites" translatable="false">%1$s - %2$s</string>
    <string name="label_calendar_term_course_details">Calendar term</string>
    <string name="label_calendar_term_class_section">Calendar term:</string>
    <string name="label_curricular_terms_programme_details">Curricular terms</string>
    <string name="label_favorites_delete_message_favorites">Successfully deleted favorite!</string>
    <string name="label_favorite_undo_favorites">Undo</string>
    <string name="label_list_event_week_day_calendar">Week day:</string>
    <string name="label_list_event_duration_calendar">Duration:</string>
    <string name="label_list_event_starts_calendar">Starts:</string>
    <string name="label_list_event_ends_calendar">Ends:</string>
    <string name="label_list_event_delivery_calendar">Delivery:</string>
    <string name="label_lectures_all">Lectures</string>
    <string name="label_exams_all">Exams</string>
    <string name="label_todos_all">Todos</string>
    <string name="label_journals_all">Journals</string>
    <string name="label_lecture_all">Lecture</string>
    <string name="label_exam_all">Exam</string>
    <string name="label_todo_all">Todo</string>
    <string name="label_journal_all">Journals</string>
    <string name="label_semester_all">Semester</string>
    <string name="label_about_info">About</string>
    <string name="label_personal_data_info">Personal data</string>
    <string name="label_errors_improvement_info">Errors and improvements</string>

    <string name="label_export_all">export</string>
    <string name="label_button_close_error">close</string>
    <string name="label_button_close_tryAgain">Update info and try again</string>
    <string name="label_outdated_app_all">Application seems to be outdated :(</string>
    <string name="label_loading_i_on_loading">Loading i-on</string>
    <string name="label_name_not_available_all">Name not available</string>
    <string name="label_list_event_location_calendar">Location:</string>

    <string name="label_no_connectivity_main">The device does not have connectivity at the moment, therefore the functionalities will be limited until there is connection available.</string>
    <string name="label_no_connectivity_loading_error">The i-on services might be down or the device does not have connectivity at the moment and you don\'t have any local data saved for some functionalities to work.</string>
    <string name="label_error_loading_error">We\'re sorry but it seems that an error occurred. Try restarting the application.</string>

    <string name="label_monday_short_calendar">MON</string>
    <string name="label_tuesday_short_calendar">TUE</string>
    <string name="label_wednesday_short_calendar">WED</string>
    <string name="label_thursday_short_calendar">THU</string>
    <string name="label_friday_short_calendar">FRI</string>
    <string name="label_saturday_short_calendar">SAT</string>
    <string name="label_sunday_short_calendar">SUN</string>

    <string name="label_monday_schedule">Monday</string>
    <string name="label_tuesday_schedule">Tuesday</string>
    <string name="label_wednesday_schedule">Wednesday</string>
    <string name="label_thursday_schedule">Thursday</string>
    <string name="label_friday_schedule">Friday</string>
    <string name="label_saturday_schedule">Saturday</string>
    <string name="label_sunday_schedule">Sunday</string>

    <string name="label_january_calendar">January</string>
    <string name="label_february_calendar">February</string>
    <string name="label_march_calendar">March</string>
    <string name="label_april_calendar">April</string>
    <string name="label_may_calendar">May</string>
    <string name="label_june_calendar">June</string>
    <string name="label_july_calendar">July</string>
    <string name="label_august_calendar">August</string>
    <string name="label_october_calendar">October</string>
    <string name="label_september_calendar">September</string>
    <string name="label_november_calendar">November</string>
    <string name="label_december_calendar">December</string>

    <string name="hint_search_main">Search…</string>
    <string name="imageView_favorite_class_section" translatable="false">favorite_icon</string>
    <string name="imageButton_clear_recent_search_main">Clear recent search</string>
    <string name="toast_search_suggestions_deleted_message_main">All Search Suggestions have been deleted!</string>
    <string name="textView_calendar_term_settings">Calendar Term \n Schedule:</string>

    <string name="placeholder_curricular_term_programme_details">%1$s Term</string>
    <string name="placeholder_schedule_hours_schedule" translatable="false">%1$s - %2$s</string>>
    <string name="placeholder_lecture_all" translatable="false">%1$s: %2$s %3$s:%4$sh - %5$s:%6$sh</string>
    <string name="placeholder_exam_all" translatable="false">%1$s: %2$d/%3$d/%4$d</string>
    <string name="placeholder_todo_all" translatable="false">%1$s: %2$d/%3$d/%4$d %5$s:%6$sh</string>
    <string name="placeholder_interval_calendar" translatable="false">%1$s:%2$sh - %3$s:%4$sh</string>
    <string name="placeholder_time_calendar" translatable="false">%1$s/%2$s/%3$s %4$s:%5$sh</string>
    <string name="placeholder_schedule" translatable="false">%1$s - %2$s</string>

    <string name="warning_no_more_classes_all">There are no more classes left this semester</string>
    <string name="warning_due_date_has_passed_all">The due date of this todo has already passed!</string>
    <string name="warning_start_date_has_passed_all">The start date of this exam has already passed</string>

    <string name="dialog_delete_search_suggestions_message_main">Are you sure you want to delete all search suggestions?</string>
    <string name="dialog_delete_search_suggestions_button_yes_main">Yes</string>
    <string name="dialog_delete_search_suggestions_button_cancel_main">Cancel</string>

    <string name="error_message_exception_all">Oops, there was an error =(</string>
    <string name="error_message_exception_no_connectivity_all">Cannot access this functionality because there is no connectivity!</string>
    <string name="error_message_exception_resource_not_available_all">Resource not available :(</string>
    <string name="errors_improvement_info">As with all software, this application is in constant development which means there might be errors that have to be fixed and improvements that can be made. The i-on Android team is doing its best to detect all the issues but, as you may realize, it\'s not an easy task so please contact us on via our github in case you found an error or if you feel there is a feature or improvement that should be added.</string>

    <string name="message_personal_data_info">The i-on Android application does not save any personal user data, it only saves information obtained from the i-on Core API. All the information that is saved stays only local to the device and once the application is uninstalled the information is deleted.</string>
    <string name="message_about_info">i-on Android is a mobile application developed by members of the i-on iniciative. The iniciative was created with the goal of improving some academic aspects in the Polytechnic Institute of Engineering of Lisbon. The iniciative was created by teachers and students. All the code from this application and the rest of the projects from the iniciative is public so feel free to check it out by clicking the i-on logo below.</string>

    <string name="remote_config_unreachable">Couldn\'t update from Remote Config, redirecting to ISEL\'s homepage</string>

    <string name="catalog_info_warning">The i-on API is down, showing catalog info</string>

    <string name="first_semester">1st Semester</string>
    <string name="second_semester">2nd Semester</string>
    <string name="calendar">Calendar</string>

    <string name="title_exam">Exam Schedule</string>
    <string name="title_timetable">Timetable</string>

    <string name="exam_day">Date: %s</string>
    <string name="exam_startDate">Start Time: %s</string>
    <string name="exam_endDate">End Time: %s</string>
    <string name="exam_category">Category: %s</string>
    <string name="exam_location">Classroom: %s</string>
    <string name="exam_location_tbd">To be determined</string>

    <string name="timetable_beginTime">Begin Time: %sh</string>
    <string name="timetable_duration">Duration: %sh</string>
    <string name="timetable_weekday">Weekday: %s</string>

    <string name="catalog_calendar_interruptions">Interruptions</string>
    <string name="catalog_calendar_evaluations">Evaluations</string>
    <string name="catalog_calendar_details">Start of Classes</string>
    <string name="catalog_calendar_otherEvents">Important Events</string>

    <string name="email_input">Input your email address</string>
    <string name="allowed_domains">Allowed Domains</string>
    <string name="email_auth_button" translatable="false">Login</string>
    <string name="invalid_email">Invalid Email! Check the authorized domains</string>
    <string name="check_email">If this is your first login, please check your email to finish the authentication process</string>
    <string name="error_login_request">There was a problem in the login response. Press "OK" to check connectivity</string>
    <string name="error_auth_methods_request">Couldn\'t get the authentication methods. Press "OK" to check connectivity</string>

    <string name="error_refreshing_token">There was an error refreshing the Access Token.
        Any attempt to subscribe to a class section will fail untill the issue is resolved.</string>

    <string name="logout" translatable="false">Logout</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>


</resources>
