<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/catalog_exam_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_transparent"
        android:elevation="@dimen/all_sections_3"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/all_list_item_padding_20"
        android:paddingTop="@dimen/sections_padding_8"
        android:paddingRight="@dimen/all_list_item_padding_20"
        android:paddingBottom="@dimen/sections_padding_8"
        android:text="ClassName"
        android:textColor="@android:color/white"
        android:textSize="@dimen/all_text_18" />

    <TextView
        android:id="@+id/catalog_exam_day"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_day"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_exam_startDate"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_startDate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_exam_endDate"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_endDate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_exam_category"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_category"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_exam_location"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_location"
        android:textSize="16sp" />

</LinearLayout>