<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout_activity_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".error.ErrorActivity">

    <!-- Top Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/errorColor"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/fragments_padding_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title_oops_error"
            android:src="@drawable/ic_error_white_100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_oops_error"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/all_text_50" />

    </LinearLayout>

    <!-- Bottom section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragments_padding_20">

        <TextView
            android:id="@+id/textview_error_activity_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_error_loading_error"
            android:textSize="@dimen/all_text_18"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_activity_error_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fragments_padding_20"
            android:backgroundTint="@color/secondaryLightColor"
            android:text="@string/label_button_close_error" />

        <Button
            android:id="@+id/button_activity_error_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fragments_padding_20"
            android:backgroundTint="@color/secondaryLightColor"
            android:text="@string/label_button_close_tryAgain" />

    </LinearLayout>


</LinearLayout>