<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/catalog_timetable_event_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_transparent"
        android:elevation="@dimen/all_sections_3"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/all_list_item_padding_20"
        android:paddingTop="@dimen/sections_padding_8"
        android:paddingRight="@dimen/all_list_item_padding_20"
        android:paddingBottom="@dimen/sections_padding_8"
        android:text="Event Name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/all_text_18" />

    <TextView
        android:id="@+id/catalog_timetable_event_beginTime"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timetable_beginTime"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_timetable_event_duration"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timetable_duration"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/catalog_timetable_event_weekday"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timetable_weekday"
        android:textSize="16sp" />

</LinearLayout>