<?xml version="1.0" encoding="utf-8"?>
<org.ionproject.android.common.SwipeRightLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catalog_term_files"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".offline.catalogTermFiles.CatalogTermFilesFragment">

    <!-- Top Section -->
    <LinearLayout
        android:id="@+id/linearlayout_catalog_term_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        android:padding="@dimen/fragments_padding_20">

        <TextView
            android:id="@+id/textview_catalog_term_files_programme"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Program"
            android:textColor="@color/primaryTextColor"

            android:textSize="@dimen/all_text_25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_catalog_term_files_term"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Term"

            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/all_text_18" />

    </LinearLayout>

    <Button
        android:id="@+id/button_catalog_term_files_exam"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragments_padding_20"
        android:text="@string/title_exam" />

    <Button
        android:id="@+id/button_catalog_term_files_timetable"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragments_padding_20"
        android:text="@string/title_timetable" />

    <Button
        android:id="@+id/button_catalog_term_files_calendar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragments_padding_20"
        android:text="@string/calendar" />

</org.ionproject.android.common.SwipeRightLinearLayout>